# sparkflow

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.cjs  README.md  lint-staged.config.mjs  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api-gateway/: Dockerfile  fly.toml  package.json
apps/challenge-service/: Dockerfile  fly.toml  package.json
apps/evaluation-service/: pyproject.toml
apps/evaluation-service/src/: main.py
apps/evaluation-service/src/application/: ports.py  result.py  submit_evaluation_use_case.py
apps/evaluation-service/src/domain/: evaluation.py
apps/evaluation-service/src/infrastructure/: contracts.py  nats_event_publisher.py  postgres_evaluation_repository.py
apps/evaluation-service/tests/: test_evaluation_submitted_contract.py  test_http_adapter.py  test_nats_event_publisher.py  test_postgres_evaluation_repository.py  test_submit_evaluation_use_case.py
apps/identity-service/: Dockerfile  fly.toml  package.json
apps/notification-service/: Dockerfile  fly.toml  package.json
apps/submission-service/: Dockerfile  fly.toml  package.json
apps/web/: angular.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vitest.config.ts
docs/: backend-readiness.md  deployment.md
infra/: docker-compose.yml
infra/keycloak/: Dockerfile  fly.toml  sparkflow-realm.json
infra/nats/: Dockerfile  fly.toml
infra/postgres-init/: 001-create-databases.sql
infra/scripts/: reset-postgres-databases.sh  smoke-proposal-workflow.sh
tooling/prettier/: index.cjs  package.json
(+120 files in other folders)
